mobile screen size view fixed, cards no longer are entire width and overextend the footer! working on highscores

--- a/easy.html
+++ b/easy.html
@@ -52,70 +52,70 @@
 
             <div class="col-xs-4 col-sm-8 col-md-8 col-lg-6 index-board container-fluid">
                 <div class="row justify-content-center">
-                    <div class="col-xs-3 col-sm-2 card easytable">
+                    <div class="col-3 col-sm-2 card easytable">
                     <img class="frontside" src="assets/images/fiora.jpg" data-image="fiora" alt="fiora">
                     <img class="backside" src="assets/images/cardeasy.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-2 card easytable">
+                    <div class="col-3 col-sm-2 card easytable">
                     <img class="frontside" src="assets/images/galio.jpg" alt="galio" data-image="galio">
                     <img class="backside" src="assets/images/cardeasy.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-2 card easytable">
+                    <div class="col-3 col-sm-2 card easytable">
                     <img class="frontside" src="assets/images/jarvan.jpg" alt="jarvan" data-image="jarvan">
                     <img class="backside" src="assets/images/cardeasy.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-2 card easytable">
+                    <div class="col-3 col-sm-2 card easytable">
                     <img class="frontside" src="assets/images/lucian.jpg" alt="lucian" data-image="lucian">
                     <img class="backside" src="assets/images/cardeasy.png" alt="icon">
                     </div>
 
-                    <div class="col-xs-3 col-sm-2 card easytable">
+                    <div class="col-3 col-sm-2 card easytable">
                     <img class="frontside" src="assets/images/garen.jpg" alt="garen" data-image="garen">
                     <img class="backside" src="assets/images/cardeasy.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-2 card easytable">
+                    <div class="col-3 col-sm-2 card easytable">
                     <img class="frontside" src="assets/images/lux.jpg" alt="lux" data-image="lux">
                     <img class="backside" src="assets/images/cardeasy.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-2 card easytable">
+                    <div class="col-3 col-sm-2 card easytable">
                     <img class="frontside" src="assets/images/quinn.jpg" alt="quinn" data-image="quinn">
                     <img class="backside" src="assets/images/cardeasy.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-2 card easytable">
+                    <div class="col-3 col-sm-2 card easytable">
                     <img class="frontside" src="assets/images/lucian.jpg" alt="lucian" data-image="lucian">
                     <img class="backside" src="assets/images/cardeasy.png" alt="icon">
                     </div>
 
-                    <div class="col-xs-3 col-sm-2 card easytable">
+                    <div class="col-3 col-sm-2 card easytable">
                     <img class="frontside" src="assets/images/quinn.jpg" alt="quinn" data-image="quinn">
                     <img class="backside" src="assets/images/cardeasy.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-2 card easytable">
+                    <div class="col-3 col-sm-2 card easytable">
                     <img class="frontside" src="assets/images/lux.jpg" alt="lux" data-image="lux">
                     <img class="backside" src="assets/images/cardeasy.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-2 card easytable">
+                    <div class="col-3 col-sm-2 card easytable">
                     <img class="frontside" src="assets/images/garen.jpg" alt="garen" data-image="garen">
                     <img class="backside" src="assets/images/cardeasy.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-2 card easytable">
+                    <div class="col-3 col-sm-2 card easytable">
                     <img class="frontside" src="assets/images/kayle.jpg" alt="kayle" data-image="kayle">
                     <img class="backside" src="assets/images/cardeasy.png" alt="icon">
                     </div>
 
-                    <div class="col-xs-3 col-sm-2 card easytable">
+                    <div class="col-3 col-sm-2 card easytable">
                     <img class="frontside" src="assets/images/jarvan.jpg" alt="jarvan" data-image="jarvan">
                     <img class="backside" src="assets/images/cardeasy.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-2 card easytable">
+                    <div class="col-3 col-sm-2 card easytable">
                     <img class="frontside" src="assets/images/fiora.jpg" alt="fiora" data-image="fiora">
                     <img class="backside" src="assets/images/cardeasy.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-2 card easytable">
+                    <div class="col-3 col-sm-2 card easytable">
                     <img class="frontside" src="assets/images/galio.jpg" alt="galio" data-image="galio">
                     <img class="backside" src="assets/images/cardeasy.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-2 card easytable">
+                    <div class="col-3 col-sm-2 card easytable">
                     <img class="frontside" src="assets/images/kayle.jpg" alt="kayle" data-image="kayle">
                     <img class="backside" src="assets/images/cardeasy.png" alt="icon">
                     </div>
