--- a/index.html
+++ b/index.html
@@ -55,54 +55,54 @@
 
             <div class="col-xs-12 col-sm-12 col-md-8 col-lg-4 index-board container-fluid">
                 <div class="row justify-content-center">
-                    <div class="col-xs-3 col-sm-3  offset-md-2 offset-lg-4 card">
+                    <div class="col-3 col-sm-3  offset-md-2 offset-lg-4 card">
                     <img class="frontside" src="assets/images/ahri.jpg" data-image="ahri" alt="ahri">
                     <img class="backside" src="assets/images/cardhome.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3  offset-md-2 offset-lg-4 card">
+                    <div class="col-3 col-sm-3  offset-md-2 offset-lg-4 card">
                     <img class="frontside" src="assets/images/akali.jpg" alt="akali" data-image="akali">
                     <img class="backside" src="assets/images/cardhome.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3  offset-md-2 offset-lg-4 card">
+                    <div class="col-3 col-sm-3  offset-md-2 offset-lg-4 card">
                     <img class="frontside" src="assets/images/brand.jpg" alt="brand" data-image="brand">
                     <img class="backside" src="assets/images/cardhome.png" alt="icon">
                     </div>
 
-                    <div class="col-xs-3 col-sm-3  offset-md-2 offset-lg-4 card">
+                    <div class="col-3 col-sm-3  offset-md-2 offset-lg-4 card">
                     <img class="frontside" src="assets/images/garen.jpg" alt="garen" data-image="garen">
                     <img class="backside" src="assets/images/cardhome.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3  offset-md-2 offset-lg-4 card">
+                    <div class="col-3 col-sm-3  offset-md-2 offset-lg-4 card">
                     <img class="frontside" src="assets/images/katarina.jpg" alt="katarina" data-image="katarina">
                     <img class="backside" src="assets/images/cardhome.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3  offset-md-2 offset-lg-4 card">
+                    <div class="col-3 col-sm-3  offset-md-2 offset-lg-4 card">
                     <img class="frontside" src="assets/images/pyke.jpg" alt="pyke" data-image="pyke">
                     <img class="backside" src="assets/images/cardhome.png" alt="icon">
                     </div>
 
-                    <div class="col-xs-3 col-sm-3  offset-md-2 offset-lg-4 card">
+                    <div class="col-3 col-sm-3  offset-md-2 offset-lg-4 card">
                     <img class="frontside" src="assets/images/pyke.jpg" alt="pyke" data-image="pyke">
                     <img class="backside" src="assets/images/cardhome.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3  offset-md-2 offset-lg-4 card">
+                    <div class="col-3 col-sm-3  offset-md-2 offset-lg-4 card">
                     <img class="frontside" src="assets/images/katarina.jpg" alt="katarina" data-image="katarina">
                     <img class="backside" src="assets/images/cardhome.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3  offset-md-2 offset-lg-4 card">
+                    <div class="col-3 col-sm-3  offset-md-2 offset-lg-4 card">
                     <img class="frontside" src="assets/images/garen.jpg" alt="garen" data-image="garen">
                     <img class="backside" src="assets/images/cardhome.png" alt="icon">
                     </div>
 
-                    <div class="col-xs-3 col-sm-3  offset-md-2 offset-lg-4 card">
+                    <div class="col-3 col-sm-3  offset-md-2 offset-lg-4 card">
                     <img class="frontside" src="assets/images/brand.jpg" alt="brand" data-image="brand">
                     <img class="backside" src="assets/images/cardhome.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3  offset-md-2 offset-lg-4 card">
+                    <div class="col-3 col-sm-3  offset-md-2 offset-lg-4 card">
                     <img class="frontside" src="assets/images/ahri.jpg" alt="ahri" data-image="ahri">
                     <img class="backside" src="assets/images/cardhome.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3  offset-md-2 offset-lg-4 card">
+                    <div class="col-3 col-sm-3  offset-md-2 offset-lg-4 card">
                     <img class="frontside" src="assets/images/akali.jpg" alt="akali" data-image="akali">
                     <img class="backside" src="assets/images/cardhome.png" alt="icon">
                     </div>
