--- a/medium.html
+++ b/medium.html
@@ -52,152 +52,152 @@
 
             <div class="col-xs-12 col-sm-12 col-md-8 col-lg-5 index-board container-fluid">
                 <div class="row justify-content-center">
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/caitlyn.jpg" data-image="caitlyn" alt="caitlyn">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/camille.jpg" alt="camille" data-image="camille">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/ekko.jpg" alt="ekko" data-image="ekko">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/camille.jpg" alt="camille" data-image="camille">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/jayce.jpg" alt="jayce" data-image="jayce">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/jayce.jpg" alt="jayce" data-image="jayce">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
 
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/ezreal.jpg" alt="ezreal" data-image="ezreal">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/janna.jpg" alt="janna" data-image="janna">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/heimer.jpg" alt="heimer" data-image="heimer">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/jinx.jpg" alt="jinx" data-image="jinx">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/jinx.jpg" alt="jinx" data-image="jinx">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/mundo.jpg" alt="mundo" data-image="mundo">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
 
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/heimer.jpg" alt="heimer" data-image="heimer">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/janna.jpg" alt="janna" data-image="janna">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/ezreal.jpg" alt="ezreal" data-image="ezreal">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/mundo.jpg" alt="mundo" data-image="mundo">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/orianna.jpg" alt="orianna" data-image="orianna">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/orianna.jpg" alt="orianna" data-image="orianna">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
 
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/ekko.jpg" alt="ekko" data-image="ekko">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/caitlyn.jpg" alt="caitlyn" data-image="caitlyn">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/singed.jpg" alt="singed" data-image="singed">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/singed.jpg" alt="singed" data-image="singed">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/twitch.jpg" alt="twitch" data-image="twitch">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/twitch.jpg" alt="twitch" data-image="twitch">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
 
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/urgot.jpg" alt="urgot" data-image="urgot">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/urgot.jpg" alt="urgot" data-image="urgot">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/vi.jpg" alt="vi" data-image="vi">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/vi.jpg" alt="vi" data-image="vi">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/viktor.jpg" alt="viktor" data-image="viktor">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/viktor.jpg" alt="viktor" data-image="viktor">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
 
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/warwick.jpg" alt="warwick" data-image="warwick">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/warwick.jpg" alt="warwick" data-image="warwick">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/zac.jpg" alt="zac" data-image="zac">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/zac.jpg" alt="zac" data-image="zac">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/ziggs.jpg" alt="ziggs" data-image="ziggs">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-lg-2 card medtable">
+                    <div class="col-3 col-sm-3 col-lg-2 card medtable">
                     <img class="frontside" src="assets/images/ziggs.jpg" alt="ziggs" data-image="ziggs">
                     <img class="backside" src="assets/images/cardmed.png" alt="icon">
                     </div>
