--- a/hard.html
+++ b/hard.html
@@ -17,6 +17,14 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+    (function(){
+        emailjs.init("user_i1GaFxi6f7EZmoPY3PUtg");
+    })();
+    </script>
     <title>League of Legends memory game?</title>
 </head>
 <body>
@@ -328,6 +336,11 @@
             </div>
         </div>
     </section>
+
+    <!-- emailjs.send("gmail", "cardgame", templateParams);
+    <form onsubmit="return sendMail(this);">
+    
+     -->
 
     <footer class="footer row justify-content-center">
         <a href="" class="col-sm-12 col-lg-3 footercontent">Contact me!</a>
