--- a/medium.html
+++ b/medium.html
@@ -217,9 +217,9 @@
      <div id="emailmodal" class="modal">
         <div class="modal-content">
             <form onsubmit="return sendMail(this)">
-                <input type="text" name="name" class="form-control" id="fullname" placeholder="Name">
-                <input type="text" name="mail" class="form-control" id="emailaddress" placeholder="Email">
-                <textarea rows="5" name="message" class="form-control" id="message" placeholder="Message"></textarea>
+                <input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required>
+                <input type="text" name="mail" class="form-control" id="emailaddress" placeholder="Email" required>
+                <textarea rows="5" name="message" class="form-control" id="message" placeholder="Message" required></textarea>
                 <button type="submit" class="btn btn-secondary center-block">Submit</button>
             </form>
          </div>
