final commit, highscore fixed and everything has been edited and smoothed out

--- a/hard.html
+++ b/hard.html
@@ -3,14 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-  <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -36,10 +28,10 @@
 
             <div>
                 <ul class="nav-bar">
-                    <li class="nav-item home"><a href="index.html" class="home"><div>Home</div></a></li>
-                    <li class="nav-item easy"><a href="easy.html" class="easy"><div>Easy</div></a></li>
-                    <li class="nav-item medium"><a href="medium.html" class="medium"><div>Medium</div></a></li>
-                    <li class="nav-item hard"><a href="hard.html" class="hard"><div>Hard</div></a></li>
+                    <li class="nav-item home"><a href="index.html" class="level home"><div>Home</div></a></li>
+                    <li class="nav-item easy"><a href="easy.html" class="level easy"><div>Easy</div></a></li>
+                    <li class="nav-item medium"><a href="medium.html" class="level medium"><div>Medium</div></a></li>
+                    <li class="nav-item hard"><a href="hard.html" class="level hard"><div>Hard</div></a></li>
                 </ul>
             </div>
         </div>
@@ -355,7 +347,5 @@
     </footer>
 
     <script src="assets/js/scripts.js"></script>
-</body>
-</html>
 </body>
 </html>
