--- a/medium.html
+++ b/medium.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+    (function(){
+        emailjs.init("user_i1GaFxi6f7EZmoPY3PUtg");
+    })();
+    </script>
     <title>League of Legends memory game?</title>
 </head>
 <body>
@@ -28,10 +28,10 @@
 
             <div>
                 <ul class="nav-bar">
-                    <li class="nav-item home"><a href="index.html" class="home"><div>Home</div></a></li>
-                    <li class="nav-item easy"><a href="easy.html" class="easy"><div>Easy</div></a></li>
-                    <li class="nav-item medium"><a href="medium.html" class="medium"><div>Medium</div></a></li>
-                    <li class="nav-item hard"><a href="hard.html" class="hard"><div>Hard</div></a></li>
+                    <li class="nav-item home"><a href="index.html" class="level home"><div>Home</div></a></li>
+                    <li class="nav-item easy"><a href="easy.html" class="level easy"><div>Easy</div></a></li>
+                    <li class="nav-item medium"><a href="medium.html" class="level medium"><div>Medium</div></a></li>
+                    <li class="nav-item hard"><a href="hard.html" class="level hard"><div>Hard</div></a></li>
                 </ul>
             </div>
         </div>
@@ -232,7 +232,5 @@
     </footer>
 
     <script src="assets/js/scripts.js"></script>
-</body>
-</html>
 </body>
 </html>
